Linter fixes